force-app/main/default/objects/Attribution__c/fields/AE_Modular_Lead__c.field-meta.xml
<CustomField>
    <fullName>AE_Modular_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AE Modular Lead</label>
    <type>Checkbox</type>
</CustomField>