force-app/main/default/objects/Attribution__c/fields/Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Agency_Name__c</fullName>
    <label>Agency Name</label>
    <type>TextArea</type>
</CustomField>