force-app/main/default/objects/Attribution__c/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <label>End Client</label>
    <type>TextArea</type>
</CustomField>