force-app/main/default/objects/Attribution__c/fields/End_Client_Email__c.field-meta.xml
<CustomField>
    <fullName>End_Client_Email__c</fullName>
    <label>End Client Email</label>
    <type>Email</type>
</CustomField>