force-app/main/default/objects/Attribution__c/fields/Introduced_Account__c.field-meta.xml
<CustomField>
    <fullName>Introduced_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Introduced Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>