force-app/main/default/objects/Attribution__c/fields/Introduced_Lead__c.field-meta.xml
<CustomField>
    <fullName>Introduced_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Introduced Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Attributions</relationshipName>
    <type>Lookup</type>
</CustomField>