force-app/main/default/objects/Attribution__c/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <label>Marketing Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Consent</valueSetName>
    </valueSet>
</CustomField>