force-app/main/default/objects/Attribution__c/fields/Opt_Out_of_Marketing_SMS__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Marketing_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Marketing SMS</label>
    <type>Checkbox</type>
</CustomField>