force-app/main/default/objects/Attribution__c/fields/Partner_Channel__c.field-meta.xml
<CustomField>
    <fullName>Partner_Channel__c</fullName>
    <formula>TEXT(Partner__r.Channel__c)</formula>
    <label>Partner Channel</label>
    <type>Text</type>
</CustomField>