force-app/main/default/objects/Attribution__c/fields/Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID__c</fullName>
    <label>Partner ID</label>
    <type>TextArea</type>
</CustomField>