force-app/main/default/objects/Attribution__c/fields/Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owner__c</fullName>
    <formula>Partner__r.FirstName +&quot; &quot;+ Partner__r.Owner.LastName</formula>
    <label>Partner Owner</label>
    <type>Text</type>
</CustomField>