force-app/main/default/objects/Attribution__c/fields/Reason_Lost__c.field-meta.xml
<CustomField>
    <fullName>Reason_Lost__c</fullName>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reasons_Lost</valueSetName>
    </valueSet>
</CustomField>