force-app/main/default/objects/Attribution__c/fields/Reason_Products_Unsuitable__c.field-meta.xml
<CustomField>
    <fullName>Reason_Products_Unsuitable__c</fullName>
    <label>Reason Products Unsuitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reason_Products_Unsuitable</valueSetName>
    </valueSet>
</CustomField>