force-app/main/default/objects/Attribution__c/fields/Referral_Friend_Email__c.field-meta.xml
<CustomField>
    <fullName>Referral_Friend_Email__c</fullName>
    <label>Referral Friend Email</label>
    <type>Email</type>
</CustomField>