force-app/main/default/objects/Attribution__c/fields/Referred_By_Email_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referred_By_Email_Lead__c</fullName>
    <formula>Referred_By_Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referred By Email (Lead)</label>
    <type>Text</type>
</CustomField>