force-app/main/default/objects/Attribution__c/fields/Renewal_Date_not_given__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date_not_given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Date not given</label>
    <type>Checkbox</type>
</CustomField>