force-app/main/default/objects/Attribution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Introduced_Lead__c</columns>
    <columns>Introduced_Account__c</columns>
    <columns>Introduction_Date__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Product_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>